--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "api": "^4.2.0",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "mint-ui": "^2.2.13",
     "stylus-loader": "^3.0.2",
     "swiper": "^5.4.5",
     "vue": "^2.6.11",
@@ -22,6 +23,7 @@
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
