--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "mint-ui": "^2.2.13",
+    "mockjs": "^1.1.0",
     "stylus-loader": "^3.0.2",
     "swiper": "^5.4.5",
     "vue": "^2.6.11",
