--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "api": "^4.2.0",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.8",
+    "element-ui": "^2.15.6",
     "mint-ui": "^2.2.13",
     "mockjs": "^1.1.0",
     "stylus-loader": "^3.0.2",
